add json grammar file